--- a/build-doc.yml
+++ b/build-doc.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.8
-  - python-igraph>=0.8.0
+  - igraph>=0.9.9
   - ddt
   - sphinx
   - sphinx_rtd_theme
